Prevent query builder tabs from becoming too large
Happens when a long query is created

--- a/ui/src/style/pages/data-explorer/font-scale.scss
+++ b/ui/src/style/pages/data-explorer/font-scale.scss
@@ -26,6 +26,9 @@ $breakpoint-c: 2100px;
     .query-builder--tabs {
       width: 320px;
     }
+    .query-builder--tab-label {
+      width: (320px - 8px - 16px - 16px);
+    }
     .qeditor--list-item,
     .query-builder--tab-label {
       font-size: 15px;
@@ -84,6 +87,9 @@ $breakpoint-c: 2100px;
   .data-explorer {
     .query-builder--tabs {
       width: 372px;
+    }
+    .query-builder--tab-label {
+      width: (373px - 8px - 16px - 16px);
     }
     .qeditor--list-item {
       letter-spacing: 0.3px;
